# SPA-basic-estimators

./: .gitignore  README.md  pyproject.toml  tech_spec.md
configs/: benchmark_suite.yaml  data.yaml  evaluation.yaml
configs/models/: accel_ridge_linear.yaml  accel_ridge_quadratic.yaml  pressure_accel_ridge_linear.yaml  pressure_accel_ridge_quadratic.yaml  pressure_ridge_linear.yaml  pressure_ridge_quadratic.yaml
data/: .gitkeep
src/spa_basic_estimators/: __init__.py
src/spa_basic_estimators/data/: __init__.py
src/spa_basic_estimators/estimators/: __init__.py  accel_ridge_linear.py  accel_ridge_quadratic.py  pressure_accel_ridge_linear.py  pressure_accel_ridge_quadratic.py  pressure_ridge_common.py  pressure_ridge_linear.py  pressure_ridge_quadratic.py
src/spa_basic_estimators/evaluation/: __init__.py  prediction_store.py  prediction_viewer.py
src/spa_basic_estimators/training/: __init__.py  run_accel_ridge_linear.py  run_accel_ridge_quadratic.py  run_pressure_accel_ridge_linear.py  run_pressure_accel_ridge_quadratic.py  run_pressure_ridge_linear.py  run_pressure_ridge_quadratic.py
src/spa_basic_estimators/utils/: __init__.py  config.py  data_loader.py  splits.py
tests/: conftest.py  test_accel_ridge_linear.py  test_accel_ridge_quadratic.py  test_loader.py  test_prediction_store.py  test_pressure_accel_ridge_linear.py  test_pressure_accel_ridge_quadratic.py  test_pressure_ridge_linear.py  test_pressure_ridge_quadratic.py  test_splits.py
